@@ -196,7 +196,7 @@ select_poll (EV_P_ ev_tstamp timeout)
       else if (errno == ENOMEM && !syserr_cb)
         fd_enomem (EV_A);
       else if (errno != EINTR)
-        syserr ("(libev) select");
+        ev_syserr ("(libev) select");
 
       return;
     }
